--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "src",
+  "name": "react-map-api",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-map-gl": "^5.2.7",
     "react-scripts": "3.4.1"
   },
   "scripts": {
