--- a/react/package.json
+++ b/react/package.json
@@ -12,6 +12,7 @@
     "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-ion-slider": "^1.0.5",
     "react-map-gl": "^5.2.7",
