--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "merge-descriptors": "^1.0.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pg": "^8.3.0"
   }
 }
